# gpt-othello

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: .env.default  Dockerfile  README.md
api/gpt_othello/: main.py
api/gpt_othello/api/: gpt.py  othello.py
api/gpt_othello/api/schema/: board.py  (+1 more)
api/gpt_othello/modules/: gpt.py  othello.py
backend/: .dir-locals.el  .env  .env.default  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/gpt_othello/: main.py
backend/gpt_othello/api/: __init__.py  gpt.py  othello.py
backend/gpt_othello/api/schema/: __init__.py  board.py  gpt_answer.py
backend/gpt_othello/lib/: MCTS.py  test.py
backend/gpt_othello/lib/othello/: OthelloGame.py  OthelloLogic.py  OthelloPlayers.py
backend/gpt_othello/lib/othello/keras/: NNet.py  OthelloNNet.py
backend/gpt_othello/modules/: gpt.py  othello.py
cdk/: README.md  package-lock.json  package.json
cdk/lib/: api-gateway-stack.ts  backend-stack.ts  cdk-stack.ts  frontend-stack.ts
front/: .gitignore  README.md  index.html  package-lock.json  package.json
front/src/: App.vue  main.ts
front/src/components/: Board.vue  Cell.vue  GameOverDialog.vue  Stone.vue
front/src/modules/: StoneColor.ts  board.ts
front/src/views/: Home.vue
frontend/: .env.default  .env.prod  README.md  package.json
frontend/src/: main.ts
frontend/src/components/: Board.vue  Cell.vue  Stone.vue
frontend/src/views/: Home.vue
gpt_othello/: hoge.py  main.py
gpt_othello/api/: __init__.py  othello.py
gpt_othello/modules/: othello.py
(+6 files in other folders)
