[tool.poetry]
name = "gpt-shogi"
version = "0.1.0"
description = ""
authors = ["Tomoyuki Higuchi <higuchi@peaberryz.com>"]
readme = "README.md"
packages = [{include = "gpt_shogi"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
