[tool.poetry]
name = "gpt-othello"
version = "0.1.0"
description = ""
authors = ["Tomoyuki Higuchi <higuchi@peaberryz.com>"]
packages = [{include = "gpt_othello"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "^0.95.1"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}
openai = "^0.27.6"
numpy = "^1.24.3"
torch = "^2.0.1"
neuralnet = "^0.2.0"
mangum = "^0.17.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
flake8 = "^6.0.0"
black = "^23.3.0"
pytest = "^7.3.1"
isort = "^5.12.0"
python-lsp-server = "^1.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 120

